--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "jamalhaneef",
+	"name": "vidsum",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@contentful/rich-text-html-renderer": "^17.0.0",
 		"@contentful/rich-text-plain-text-renderer": "^17.0.0",
+		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"animejs": "^4.0.2",
 		"bits-ui": "^1.3.19",
@@ -50,6 +51,7 @@
 		"phosphor-svelte": "^3.0.1",
 		"resend": "^4.4.0",
 		"svelte-sonner": "^0.3.28",
-		"youtube-captions-scraper": "^2.0.3"
+		"youtube-captions-scraper": "^2.0.3",
+		"ytdl-core": "^4.11.5"
 	}
 }
