--- a/package.json
+++ b/package.json
@@ -40,12 +40,17 @@
 	"dependencies": {
 		"@contentful/rich-text-html-renderer": "^17.0.0",
 		"@contentful/rich-text-plain-text-renderer": "^17.0.0",
+		"@dofy/youtube-caption-fox": "^1.5.1",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"animejs": "^4.0.2",
 		"bits-ui": "^1.3.19",
 		"contentful": "^11.5.16",
+		"googleapis": "^148.0.0",
+		"jsdom": "^26.1.0",
+		"katex": "^0.16.22",
 		"marked": "^15.0.11",
+		"marked-katex-extension": "^5.1.4",
 		"motion": "^12.8.0",
 		"openai": "^4.97.0",
 		"phosphor-svelte": "^3.0.1",
