--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@iconify/svelte": "^4.2.0",
+		"@shikijs/markdown-it": "^3.4.2",
 		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -41,22 +42,22 @@
 		"@contentful/rich-text-html-renderer": "^17.0.0",
 		"@contentful/rich-text-plain-text-renderer": "^17.0.0",
 		"@dofy/youtube-caption-fox": "^1.5.1",
+		"@iktakahiro/markdown-it-katex": "^4.0.1",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"animejs": "^4.0.2",
 		"bits-ui": "^1.3.19",
+		"carta-md": "^4.10.2",
 		"contentful": "^11.5.16",
-		"googleapis": "^148.0.0",
-		"jsdom": "^26.1.0",
+		"highlight.js": "^11.11.1",
 		"katex": "^0.16.22",
-		"marked": "^15.0.11",
-		"marked-katex-extension": "^5.1.4",
+		"markdown-it": "^14.1.0",
+		"markdown-it-highlightjs": "^4.2.0",
 		"motion": "^12.8.0",
 		"openai": "^4.97.0",
 		"phosphor-svelte": "^3.0.1",
 		"resend": "^4.4.0",
 		"svelte-sonner": "^0.3.28",
-		"youtube-captions-scraper": "^2.0.3",
-		"ytdl-core": "^4.11.5"
+		"youtube-captions-scraper": "^2.0.3"
 	}
 }
