feat: Update environment configuration and refactor API routes to use dynamic Supabase table name

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+BACKEND_URL=http://localhost:8000
+
 GEMINI_API_KEY = "GEMINI_API_KEY"
 OPENAI_API_KEY = "OPENAI_API_KEY" # Optional, only if you want to use OpenAI's API
 
+="true" # Set to "true" if you want to use Supabase for saving notes
+
 PUBLIC_SUPABASE_URL="PUBLIC_SUPABASE_URL" # Only required if you want to save notes to Supabase
 PUBLIC_SUPABASE_ANON_KEY="PUBLIC_SUPABASE_ANON_KEY" # Only required if you want to save notes to Supabase
+
+SUPABASE_TABLE_NAME="notes" # Only required if you want to save notes to Supabase
